paymentapp-gitops/apps/payment-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: payment-system
  labels:
    app: payment-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      containers:
        - name: payment-api
          image: ghcr.io/arunkk98/payment-api:latest
          ports:
            - containerPort: 5678
          readinessProbe:
            httpGet:
              path: /health
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 15
