paymentapp-gitops/apps/payment-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api-service
  namespace: payment-system
  labels:
    app: payment-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
      name: http
  selector:
    app: payment-api
