paymentapp-gitops/apps/payment-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  namespace: payment-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: payment.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-api-service
                port:
                  number: 80
